<resources>
    <string name="app_name">Kabiné Šerinjon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="forgotPassword">Pozabljeno geslo?</string>
    <string name="registration">Registracija</string>
    <string name="vpis">VPIS</string>
    <string name="geslo">Geslo</string>
    <string name="uporabni_ko_ime">Uporabniško ime</string>
    <string name="ime_in_priimek">Ime in priimek</string>
    <string name="telefonska_tevilka">Telefonska številka</string>
    <string name="e_mail">e-mail</string>
    <string name="registracija">Registracija</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="care_welcome">Vsako oblačilo zahteva sebi prilagojeno nego. Pri ustreznem ravnanju z izposojenimi kosi, ti bodo pomagali naslednji simboli:</string>
    <string name="care_item0">Simboli za pranje</string>
    <string name="care_item0_item0">Številka v kadi je najvišja temperatura, pri kateri lahko peremo oblačilo.\nČe je pod kadjo črta ali dve, to pomeni, da oblačilo peremo na programu za občutljivo perilo.\nRoka v kadi pomeni ročno pranje.</string>
    <string name="care_item1">Simboli za sušenje</string>
    <string name="care_item1_item0">Krog v kvadratu je simbol za strojno sušenje. Pika v sredini pomeni program za občutljivejše perilo s sušenjem pri nižji temperaturi.\nČe je boben sušilnega stroja prečrtan, sušenje v stroju ni dovoljeno.</string>
    <string name="care_item2">Simboli za likanje</string>
    <string name="care_item2_item0">Če je likalnik prečrtan, perila ne likamo. Pike določajo temperaturo, pri kateri lahko oblačilo likamo (tri pike pomenijo najvišjo temperaturo).</string>
    <string name="care_item3">Ostali simboli</string>
    <string name="care_item3_item0">Krog je simbol za kemično čiščenje, črka v krogu opredeljuje kemikalijo, s katero lahko oblačilo čistimo.\nČe je krog prečrtan, kemično čiščenje ni dovoljeno.\nTrikotnik je simbol za beljenje. Če je prečrtan, beljenje ni dovoljeno.</string>
    <string name="opis_pod_logo">Veseli smo, da se želiš pridružiti skupnosti, ki spreminja svoj odnos do oblačil.</string>
    <string name="opis_pod_vstopi">Za začetek se prosim vpiši ali registriraj. Zatem lahko takoj začneš z brskanjem po unikatnih modnih kosih.</string>
    <string name="o_aplikaciji_1">Aplikacija je bila izdelana kot del študentskega projekta \"Po kreativni poti do znanja\" z naslovom \"Temne skrivnosti hitre mode\" v sodelovanju s podjetjem Snaga d.o.o. .</string>
    <string name="priljubljeni_kosi">Priljubljeni kosi</string>
    <string name="brez_rezerviranih_Oblačil">Trenutno nimaš rezerviranega nobenega kosa. Skoči na galerijo in si hitro enega izberi.</string>
    <string name="brez_priljubljenih">Trenutno nimaš nobenega priljubljenega kosa. V galeriji si jih lahko izbereš s klikom na srček in si tako ustvariš seznam sebi najljubših kosov.</string>
    <string name="galerija">Galerija</string>
    <string name="status_rezervacije">Status rezervacije</string>
    <string name="zivljenska_doba">Povprečna življenjska doba oblačil hitre mode znaša manj kot 2 leti.</string>
    <string name="pobiralec">Pobiralec bombaža v Indiji je za celodnevno delo plačan 1,5€.</string>
    <string name="hitra_moda_in_mi">Hitra moda in mi</string>
    <string name="moj_profil">Moj profil</string>
    <string name="nega_obla_il">nega oblačil</string>
    <string name="o_negi">Kabiné Šerinjon je knjižnica oblačil in modnih dodatkov slovenskih modnih oblikovalcev ter vintidž oblek iz Centra ponovne uporabe.\n\nNastal je v okviru projekta Po kreativni poti do znanja in je plod sodelovanja sedmih študentov s treh različnih fakultet Univerze v Ljubljani pod vodstvom pedagoških in delovnih mentorjev.\n\nZa imenom Kabiné Šerinjon se skriva naša želja po spreminjanju odnosa do samoumevnih in vsakodnevnih dobrin.\n\nPredstavljamo pot do nasprotja hitre, surove in množične proizvodnje ter potrošnje oblačil.</string>
    <string name="zahvala">Posebna zahvala gre predvsem vsem sodelujočim modnim oblikovalcem in mentorjem projekta.</string>
    <string name="sofinanciranje">Projekt sofinancirata Republika Slovenija in Evropska unija iz Evropskega socialnega sklada.</string>
    <string name="dogovor_izposoje">Za izposojo se dogovori s trenutnim imetnikom. Če si oblačilo že prejel, to prosim potrdi s klikom na spodnji gumb.</string>
    <string name="st_preostalih_dni">Št. preostalih dni</string>
    <string name="trenutni_imetnik">Juhu, si trenutni imetnik oblačila :)</string>
    <string name="zapomni_si_me">Zapomni si me</string>
    <string name="ime">Ime</string>
    <string name="priimek">Priimek</string>
    <string name="staro_geslo">Staro geslo:</string>
    <string name="novo_geslo">Novo geslo:</string>
    <string name="preklici">Prekliči</string>
    <string name="potrdi">Potrdi</string>
    <string name="sprememba_podatkov">Sprememba podatkov</string>
    <string name="posta">e-pošta:</string>
    <string name="stevilka">Tel. številka</string>
    <string name="naslov">Naslov</string>
    <string name="prekli_i">Prekliči</string>
    <string name="prekliCi_rezervacijo">Prekliči rezervacijo</string>
    <string name="oblacilo_sprejeto">Oblačilo sprejeto</string>
    <string name="kontakt">Kontakt trenutnega imetnika</string>
    <string name="oblacilo_oddano">Oblačilo oddano</string>
    <string name="predano_oblacilo">Če si oblačilo že predal naslednjemu uporabniku, to prosim potrdi s klikom na spodnji gumb.</string>
    <string name="kontaktni_podatki_prejemnika">Kontaktni podatki prejemnika</string>
    <string name="zbrisi_rezervacijo">Izbriši rezervacijo</string>
    <string name="cakalna_vrsta">Čakalna vrsta</string>
    <string name="uporabnik">Uporabnik</string>
    <string name="trenutni_imetnik1">Trenutni imetnik</string>
    <string name="negovati">P.S.: Oblačila ne pozabi oprati in oddati tako lepo negovanega, kot si ga prejel.</string>
    <string name="predaja_oblacila">Predaja Oblačila</string>
    <string name="tip_obleke">Tip obleke</string>
    <string name="ime_oblikovalca">Ime oblikovalca</string>
    <string name="nega_oblacil">Nega oblačil</string>
    <string name="rezervacija">Rezervacija</string>
    <string name="trenut_imetnik">Trenutni imetnik</string>
    <string name="o_hitri_modi">O hitri modi</string>
    <string name="domov">Domov</string>
    <string name="o_hitri_modi_content">Oblačila spremljajo naš vsakdan, česar se zavedajo tudi podjetja, ki te prepričujejo, da je sreča pogojena z nenehnim kupovanjem novih. Proizvodnja tako imenovane »hitre mode« negativno učinkuje na okolje - v tretjem svetu s pridelovanjem surovin, z uporabo nevarnih (v EU in ZDA prepovedanih) kemikalij, v razvitih državah pa z odpadki, ko oblačila po kratkem času zavržeš.\n\nOblačila hitre mode slabo vplivajo na tvoje zdravje, saj lahko vsebujejo škodljive snovi, za katere je dokazano, da slabijo hormonsko ravnovesje, imunski sistem in pospešujejo nastanek novotvorb. Z nakupom teh oblačil pa ne ogrožaš le svojega zdravja, temveč hkrati podpiraš suženjski odnos med tekstilnimi podjetji in delavci v azijskih potilnicah (»sweatshop«). Najpomembneje je, da oblačila kupuješ premišljeno! Več o problematiki hitre mode si lahko prebereš na naši spletni strani: <a href="http://www.kabine-sherinjon.si/">www.kabine-sherinjon.si.</a></string>
    <string name="pomoc">Pomoč</string>
    <string name="pomoc_question0">1. Kaj je Kabiné Šerinjon?</string>
    <string name="pomoc_anwser0">Kabiné Šerinjon je ime spletne in mobilne platforme, ki omogoča brezplačno izposojo oblačil in modnih dodatkov slovenskih modnih oblikovalcev ter vintidž oblačil iz Centra ponovne uporabe.</string>
    <string name="pomoc_question1">2. Kdo stoji za tem?</string>
    <string name="pomoc_anwser1">Sedem študentov iz treh ljubljanskih fakultet, ki s pomočjo pedagoških mentorjev in ljubljanske Snage razkrivamo temno plat hitre mode ter spodbujamo do ljudi in okolja boljše izbire.</string>
    <string name="pomoc_question2">3. Kako deluje?</string>
    <string name="pomoc_anwser2">Več o postopku izmenjave in pravilih lahko prebereš v pravilih igre.</string>
    <string name="pomoc_question3">4. Koliko stane izposoja?</string>
    <string name="pomoc_anwser3">Izposoja vseh modnih kosov, dodatkov in vintidž oblačil je brezplačna.</string>
    <string name="pomoc_question4">5. Kakšne so velikosti oblačil?</string>
    <string name="pomoc_anwser4">Oblačila so na voljo v različnih konfekcijskih številkah, nekaj kosov pa je takšnih, da jih lahko nosijo osebe z različnimi številkami in postavami.</string>
    <string name="pomoc_question5">6. Kako dolgo imam lahko izposojeno oblačilo/modni dodatek?</string>
    <string name="pomoc_anwser5">En kos imaš lahko v izposoji največ dva tedna.</string>
    <string name="pomoc_question6">7. Ali si lahko večkrat izposodim isti kos?</string>
    <string name="pomoc_anwser6">Seveda!</string>
    <string name="pomoc_question7">8. Ali si lahko izposodim več kosov naenkrat?</string>
    <string name="pomoc_anwser7">Za zdaj si lahko vsak uporabnik izposodi le en kos naenkrat.</string>
    <string name="pomoc_question8">9. Želim si izposoditi kos, kaj naj naredim?</string>
    <string name="pomoc_anwser8">Za izposojo kateregakoli kosa iz galerije moraš najprej dopolniti svoj uporabniški profil. To narediš, tako da v spustnem meniju desno od tvoje profilne fotografije izbereš možnost \"Dopolni profil\".\n\nKo si v galeriji izbereš želeni kos, je v njegovem opisu tudi podatek, ali je na voljo takoj ali je trenutno izposojen. Če je v izposoji, se vpiši v čakalno vrsto, nato pa stopi v kontakt s trenutnim uporabnikom, da se dogovorita za predajo in prevzem. Kontakt trenutnega uporabnika se ti bo izpisal, ko boš prvi/a v čakalni vrsti.</string>
    <string name="pomoc_question9">10. Kje in kako prevzamem rezervirano?</string>
    <string name="pomoc_anwser9">Oblačilo/modni dodatek prejmeš od prejšnjega uporabnika tako, da si najprej izmenjata kontakte ter se nato srečata v živo ali pa si pošljeta izdelek po pošti. Kontakt trenutnega uporabnika se ti bo izpisal, ko boš prvi/a v čakalni vrsti. Priporočamo, da se prejšnji in naslednji uporabnik srečata v živo ter ob prevzemu preverita, da je modni kos nepoškodovan in čist.</string>
    <string name="pomoc_question10">11. Kako izposojeno predam naprej?</string>
    <string name="pomoc_anwser10">Tri dni pred iztekom roka za izposojo prejmeš opomnik. Kos, ki ga predaš naprej, mora biti čist (opran) in nepoškodovan. Navodila za vzdrževanje najdeš na etiketi, ki je priložena vsakemu kosu. Odgovornost vsakega uporabnika je, da naprej preda nepoškodovan in čist kos v vrečki, v kateri je izposojen kos tudi dobil, poleg pa mora priložiti tudi etiketo z opisom in navodili za vzdrževanje.</string>
    <string name="pomoc_question11">12. Kaj naredim, če mi prejšnji uporabnik ne preda oblačila/modnega dodatka?</string>
    <string name="pomoc_anwser11">Če oblačila/dodatka brez pojasnila ali dogovora s prejšnjim uporabnikom ne prejmeš v 24 urah po izteku pričakovanega roka za izposojo, nas o tem obvesti na elektronski naslov kabine.sherinjon@gmail.com.</string>
    <string name="pomoc_question12">13. Kaj naredim, če izposojenega kosa ne morem predati naslednjemu uporabniku?</string>
    <string name="pomoc_anwser12">V primeru, da izposojenega izdelka ne moreš predati naprej prvemu uporabniku v čakalni vrsti, nam v 24 urah po izteku časa izposoje to sporoči na naš e-naslov kabine.sherinjon@gmail.com. Če izdelka v treh dneh po izteku časa izposoje ne predaš prvemu ali drugemu uporabniku v čakalni vrsti, ga v vnaprej dogovorjenem času predaj nam. Če izdelka ne predaš v treh dneh po izteku časa izposoje, ti bomo blokirali uporabniški profil.</string>
</resources>