<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tshm.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <!--gornji del(slika, 2 textboxa, pozabljeno geslo)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@drawable/loginbackground"
            android:orientation="vertical">
            <!--zeleni del-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.6"
                        app:srcCompat="@drawable/logo_final2" />
                </LinearLayout>

            </LinearLayout>


            <!-- vnosna polja -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.95"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/UserName"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.3"
                        android:alpha="0.7"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:gravity="center_vertical|center_horizontal"
                        android:hint="@string/uporabni_ko_ime"
                        android:inputType="textPersonName"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textSize="@dimen/normal_font_size"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.95"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/Password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.3"
                        android:alpha="0.6"
                        android:autoText="false"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/geslo"
                        android:inputType="textPassword"
                        android:textSize="@dimen/normal_font_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1.5">

                    <CheckBox
                        android:id="@+id/RememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/zapomni_si_me"
                        android:textSize="@dimen/normal_font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/errorTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/error"
                        android:textSize="@dimen/normal_font_size" />

                    <TextView
                        android:id="@+id/ForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/forgotPassword"
                        android:textSize="@dimen/small_font_size" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.2"
            android:background="#D3D3D3"
            android:gravity="center"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/LogInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/vpis"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="@dimen/button_font_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:gravity="top|center_horizontal"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/RegistrationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/registration"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/button_font_size" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
