<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nejc.tshm.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/loginbackground"
            android:orientation="vertical"
            android:weightSum="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.88"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    app:srcCompat="@drawable/logo_final2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.005"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/firstNameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/ime"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.005"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/lastNameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/priimek"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.005"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/userNameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/uporabni_ko_ime"
                    android:inputType="textPersonName"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.005"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/password1ET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/geslo"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.005"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/password2ET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/geslo"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1.6">

                <TextView
                    android:id="@+id/errorTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:textColor="@color/error"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="#D3D3D3"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/RegistrationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/registracija"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
